--- a/valspar/index.html
+++ b/valspar/index.html
@@ -48,6 +48,7 @@
 				window.top.location = oauth_url;
 			}
 */				var ID = 0;
+				var SubmitID = 0;
 
 			$(document).ready(function(e)
 			{
@@ -86,12 +87,12 @@
 						if (response && response.post_id)
 						{
 //							alert('Post was published.');
-							FB.api('/me', function(response)
-							{
-								$.post( 'https://valspar.thetigerparty.com/Valspar/SQL.php',	{"Name": response.name, "Email": response.email, "PictureSelect": ID}, function(data)
+//							FB.api('/me', function(response)
+//							{
+								$.post( 'https://valspar.thetigerparty.com/Valspar/SQL.php',	{"SubmitID": SubmitID}, function(data)
 								{
 								});
-							});
+//							});
 						}
 						else
 						{
@@ -101,7 +102,7 @@
 				});
 				$("#ImgBtTW").click(function(e)
 				{
-					window.open( "https://valspar.thetigerparty.com/Valspar/twitter/index2.php?ID="+ID, "Share Twitter",'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=550,height=300');
+					window.open( "https://valspar.thetigerparty.com/Valspar/twitter/index2.php?ID="+ID+"&SubmitID="+SubmitID, "Share Twitter",'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=550,height=300');
 /*					var xmlhttp;
 					if (window.XMLHttpRequest)
 					{// code for IE7+, Firefox, Chrome, Opera, Safari
@@ -173,9 +174,11 @@
 						{
 							$.post( 'https://valspar.thetigerparty.com/Valspar/SQLSubmit.php',	{"Name": response.name, "Email": response.email, "PictureSelect": ID}, function(data)
 							{
+								SubmitID = data.split("\n")[2];
+								$('#PopupCanvas').lightbox_me({centered: true});
+
 							});
 						});
-						$('#PopupCanvas').lightbox_me({centered: true});
 					}
 				});
 				
