--- a/valspar/index.html
+++ b/valspar/index.html
@@ -52,11 +52,11 @@
 					var result = FB.ui(
 					{
 						method: 'feed',
-						name: 'Valspar Love Your Color Guarantee Project',
 						link: 'https://apps.facebook.com/valspar',
 						picture: 'http://valspar.thetigerparty.com/Valspar/Assets/Facebook_Twitter_Icons/Color_'+ID+'_icon.png',
-						caption: 'As a part of the Valspar Love Your Color Guarantee Project, I helped guarantee a donation to Habitat for Humanity by painting this house Cool Rain. You can help, too.'//,
-//						properties: {'You Can, too.':'https://apps.facebook.com/valspar'}
+						name: 'Valspar Love Your Color Guarantee Project',
+						caption: 'As a part of the Valspar Love Your Color Guarantee Project, I helped guarantee a donation to Habitat for Humanity by painting this house Cool Rain.',
+						description: 'You can help, too!'
 					},
 					function(response)
 					{
