--- a/valspar/index.html
+++ b/valspar/index.html
@@ -191,7 +191,7 @@ alert( "Frame title: " + iframe.contentWindow.title );
 		<div class="objinside" id="DivImgColor5"><img src="Assets/01_Tab/Color_5.png" id="ImgBt05" /></div>
         
 		<div class="objinside" id="DivImgBtSubmit"><img src="Assets/01_Tab/Submit_Btn_Disabled.png" id="ImgBtSu" /></div>
-		<div class="objinside" id="DivImgBtText"><a target="_blank" href="http://www.loveyourcolor.com/"><img src="Assets/01_Tab/LoveYourColor.png" id="ImgBtTx" /></a></div>
+		<div class="objinside" id="DivImgBtText"><a target="_blank" href="http://www.loveyourcolor.com/"><img src="Assets/01_Tab/LoveYourColor.png" id="ImgBtTx" border="0" /></a></div>
 	</div>
     <div class="objinside" id="PopupCanvas">
 		<!--div style="position:absolute; left:64px; top:472px"><img src="Assets/03_Post_Donate/Post_Donate_BG.png" id="FBLike" /></div-->
