Fix the link to post on the facebook

--- a/trunk/valspar/submit.html
+++ b/trunk/valspar/submit.html
@@ -62,11 +62,12 @@
 							   			var result = FB.ui(
 										{
 											method: 'feed',
-											link: 'https://apps.facebook.com/valspar',
+											link: 'https://www.facebook.com/ValsparPaint/app_492668300762232',
 											picture: 'http://valspar.thetigerparty.com/Valspar/Assets/Facebook_Twitter_Icons/Color_'+ID+'_icon.png',
 											name: 'Valspar Love Your Color Guarantee Project',
-											caption: 'As a part of the Valspar Love Your Color Guarantee Project, I helped guarantee a donation to Habitat for Humanity by painting this house Valspar '+ colorname +'.',
-											description: 'You can help, too!'
+											caption: ' ',
+											description: 'As part of the Valspar Love Your Color Guarantee Project, I helped guarantee a donation to Habitat for Humanity by painting this house Valspar '+ colorname +'.You can help, too!',
+											//description: 'You can help, too!'
 										},
 										function(response)
 										{
