marge FTP & SVN Code

--- a/trunk/valspar/submit.html
+++ b/trunk/valspar/submit.html
@@ -93,7 +93,7 @@
 				});
 				$("#ImgBtTW").click(function(e)
 				{
-					window.open( "twitter/index2.php?ID="+ID+"&SubmitID="+SubmitID, "Share Twitter",'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=550,height=300');
+					window.open( "twitter/index2.php?ID="+ID+"&SubmitID="+SubmitID, "Share_Twitter",'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=550,height=300');
 					 
 					$('#PopupCanvas').trigger('close');	
 					//window.location.href = "thankyou.php";	
