--- a/trunk/valspar/index.html
+++ b/trunk/valspar/index.html
@@ -8,20 +8,19 @@
         <script type="text/javascript">
 	
 			 
-			function grow()
-			{
-			    FB.Canvas.setAutoGrow(); 
-			     
-			}
+//			function grow()
+//			{
+//			    FB.Canvas.setAutoGrow(); 
+//			}
 			
-			//var iframe = $('.fb-like')[0].childNodes[0].childNodes[0];
-			alert( "Frame title: " + iframe.contentWindow.title );
+			//var iframe = $('.fb-like')[0].childNodes[0].childNodes[0];onLoad="grow();"
+			//alert( "Frame title: " + iframe.contentWindow.title );
   
         </script>
 <title>Valspar</title>
 </head>
 
-<body style="width:100%;height:1160px;overflow:hidden;margin:0; padding:0; border:0;" onLoad="grow();">
+<body style="width:100%;height:1160px;overflow:hidden;margin:0; padding:0; border:0;" >
 
 <div id="IndexPage" style="height:100%">
 	<div id="FongateCanvas">
